# scrapes_mcgee

./: .env.example  .gitignore  GITHUB_SETUP.md  README.md  SETUP.md  pyproject.toml  scrapes.py
.devcontainer/: devcontainer.json
examples/: scrape_erowid.py
mcgee/: agent.py  github_pusher.py
scraper/: core.py  storage.py
targets/examples/: erowid_dmt_entities.yaml  mckenna_language.yaml
